[FIX]: hide overflowing content

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -54,6 +54,7 @@ main {
 
   max-width: 900px;
   margin: 0 auto;
+  overflow: hidden;
 }
 
 section {
